--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@okta/okta-vue": "1.3.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "lodash": "4.17.15",
+    "marked": "0.8.0",
+    "vue": "^2.6.11",
+    "vue-material": "1.0.0-beta-11",
+    "vue-router": "3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
