--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-cms-blueprint",
+  "name": "vue-cms-groups",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,21 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@okta/okta-vue": "1.3.0",
+    "@okta/okta-vue": "^2.0.0",
     "core-js": "^3.6.4",
     "lodash": "4.17.15",
-    "marked": "0.8.0",
+    "marked": "1.0.0",
     "vue": "^2.6.11",
-    "vue-material": "1.0.0-beta-11",
+    "vue-material": "1.0.0-beta-12",
     "vue-router": "3.1.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -41,6 +41,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not dead"
   ]
 }
